# WordScript

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  _debug-mode.mjs  _final-v4.mjs  _final-v5.mjs  _final-v6.mjs  _find-orange.mjs  _measure-all.mjs  _measure-padding.mjs  index.html  package-lock.json  package.json  setup-tauri.ps1  setup-tauri.sh  setup.ps1  setup.sh  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.storybook/: preview.tsx
docs/: ARCHITECTURE.md  BENCHMARK_MATRIX.md  BUG_OVERLAY_GHOSTING.md  CORE_EXECUTION_PLAN.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  HOTKEY_HANDOFF.md  PLATFORMS.md  REFERENCE.md  RELEASE_RUNBOOK.md  ROADMAP.md  STATUS.md  UI_UX_OVERHAUL_PLAN.md  VISION.md
docs/donors/: BENCHMARK_MATRIX.md  CORE_EXECUTION_PLAN.md  README.md
docs/handoffs/: HOTKEY_HANDOFF_easy-wins-hotkey-hygiene.md  OVERLAY_LINUX_BLACK_BLOCK_HANDOFF.md  OVERLAY_PHASE1_HANDOFF.md  README.md  SETTINGS_SCROLL_PERFORMANCE_HANDOFF.md  control-input-linux-portal-prompt.md
hooks/: pre-commit
packaging/kwin-wordscript-overlay/: metadata.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: agent.rs  capture.rs  config.rs  e2e_tests.rs  history.rs  insertion.rs  mod.rs  mode_router.rs  paths.rs  portal.rs  prompt_enhance.rs  regression_corpus.rs  runtime_log.rs  sessions.rs  sound.rs  text_rules.rs  transcription_hints.rs  transform.rs  trigger.rs  updates.rs  workspace_context.rs
src-tauri/src/core/providers/: groq.rs  local_preview.rs  mod.rs
src-tauri/src/v1_slice/: contracts.rs  mod.rs  runtime.rs
src-tauri/tests/fixtures/: regression_transcripts.json  regression_transcripts.schema.json
src/data/: curatedTextProfiles.json
src/hooks/: diagnosticsPolling.test.tsx  useGroqProvider.ts  useProvider.ts  (+8 more)
(+93 files in other folders)
