[package]
name = "wordscript"
version = "0.2.2-alpha"
description = "WordScript — lightweight speech-to-text desktop utility"
authors = []
license = "MIT"
repository = "https://github.com/SW-Bench/WordScript"
edition = "2021"

[lib]
name = "wordscript_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "wordscript"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
keyring     = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest     = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
arboard     = { version = "3.6", features = ["wayland-data-control"] }
enigo       = "0.6"
cpal        = "0.16"
hound       = "3.5"
rodio       = "0.21.1"
regex       = "1"
semver      = "1"

[features]
# This feature is used for production builds or when a dev server is not specified.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
# Dev builds: smaller target/ with debug=1 instead of debug=2.
# Incremental remains on so re-compiles after `cargo clean` stay fast.
debug         = 1
incremental   = true
codegen-units = 256

[profile.release]
# Smaller binary; LTO also helps
opt-level   = "s"
lto         = true
strip       = true
codegen-units = 1
panic       = "abort"

[patch.crates-io]
global-hotkey = { path = "../vendor/global-hotkey" }
